assert-struct/tests/compile_fail/span_propagation_complex.stderr
error[E0599]: `&ValueStream` is not an iterator
  --> tests/compile_fail/span_propagation_complex.rs:29:11
   |
4  |   struct ValueStream {
   |   ------------------ doesn't satisfy `ValueStream: Iterator`
...
28 | /     assert_struct!(resp.rows, Rows::Values(
29 | |         0.collect().await.unwrap(): [
   | |          -^^^^^^^ `&ValueStream` is not an iterator
   | |__________|
   |
   |
   = note: the following trait bounds were not satisfied:
           `&ValueStream: Iterator`
           which is required by `&mut &ValueStream: Iterator`
           `ValueStream: Iterator`
           which is required by `&mut ValueStream: Iterator`
note: the trait `Iterator` must be implemented
  --> $RUST/core/src/iter/traits/iterator.rs
   |
   | pub trait Iterator {
   | ^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the trait `Iterator` defines an item `collect`, but is explicitly unimplemented
